# Sonar_desktop_app

./: .denoignore  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .~lock.20240212_NP_e.xlsx#  .~lock.20240213_NP_e.csv#  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  Roadmap.md  deno.json  docker-compose.observability.yml  index.html  package-lock.json  package.json  release_downloads.sh  sonar-project.properties  source-manifest.sha256  trivy_repo_main.txt  vite.config.js.timestamp-1702998903625-3ab5ffcae800f.mjs  vite.config.ts  vuln.txt
CR/: CR_221025.md  (+1 more)
src/: sum.js  (+4 more)
src-tauri/: .gitignore  .~lock.20240326_NP_e.xlsx#  Cargo.toml  build.rs  cargo_expand.txt  deny.toml  licenses.json  liste_fichiers.txt  oui.csv  tauri.conf.json  test_output.csv
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/resources/: labels.csv
src-tauri/src/: lib.rs  main.rs  startup_smoke.rs
src-tauri/src/capture_packet/: mod.rs
src-tauri/src/capture_packet/layer_2_infos/: mod.rs
src-tauri/src/capture_packet/layer_2_infos/layer_3_infos/: mod.rs
src-tauri/src/capture_packet/layer_2_infos/layer_3_infos/layer_4_infos/: mod.rs
src-tauri/src/cli/: mod.rs
src-tauri/src/commandes/: flow_matrix.rs  get_hostname_to_string.rs  get_interfaces.rs  import.rs  mod.rs  net_capture.rs  net_interface.rs
src-tauri/src/commandes/export/: csv.rs  logs.rs  mod.rs
src-tauri/src/commandes/get_graph_data/: mod.rs
src-tauri/src/commandes/import/: mod.rs
src-tauri/src/commandes/sniff/: mod.rs
src-tauri/src/commandes/sniff/capture_packet/: error.rs  mod.rs
src-tauri/src/commandes/sniff/capture_packet/layer_2_infos/: mod.rs
src-tauri/src/commandes/sniff/capture_packet/layer_2_infos/layer_3_infos/: mod.rs
src-tauri/src/commandes/sniff/capture_packet/layer_2_infos/layer_3_infos/layer_4_infos/: mod.rs
src-tauri/src/dto/: mod.rs
src-tauri/src/errors/: capture_error.rs  export.rs  import.rs  label.rs  mod.rs
src-tauri/src/events/: mod.rs
src-tauri/src/filter_packets/: mod.rs
src-tauri/src/get_hostname/: mod.rs
src-tauri/src/get_interfaces/: mod.rs
src-tauri/src/get_matrice/: mod.rs
src-tauri/src/get_matrice/get_graph_data/: mod.rs
src-tauri/src/get_matrice/get_matrice_data/: mod.rs
src-tauri/src/save_packet/: mod.rs
src-tauri/src/save_packets/: mod.rs
src-tauri/src/setup/: about.rs  labels.rs  mod.rs  system_info.rs
src-tauri/src/sniff/: mod.rs
src-tauri/src/sniff/capture_packet/: mod.rs
src-tauri/src/sniff/capture_packet/layer_2_infos/: mod.rs
src-tauri/src/sniff/capture_packet/layer_2_infos/layer_3_infos/: mod.rs  profinet.rs
src-tauri/src/sniff/capture_packet/layer_2_infos/layer_3_infos/ip_type/: mod.rs
src-tauri/src/sniff/capture_packet/layer_2_infos/layer_3_infos/layer_4_infos/: mod.rs
src-tauri/src/sniff/capture_packet/layer_2_infos/layer_3_infos/layer_4_infos/layer_7_infos/: mod.rs
src-tauri/src/state/: graph.rs  label_files_list.rs  labels_list.rs  mod.rs
src-tauri/src/state/capture/: mod.rs
src-tauri/src/state/capture/capture_config/: mod.rs
src-tauri/src/state/capture/capture_handle/: mod.rs  setup.rs
src-tauri/src/state/capture/capture_handle/messages/: capture.rs  channel.rs  mod.rs  stats.rs
src-tauri/src/state/capture/capture_handle/threads/: capture.rs  mod.rs  packet_buffer.rs  processing.rs
src-tauri/src/state/flow_matrix/: labels.rs  mod.rs
src-tauri/src/tauri_state/: graph.rs  matrice.rs  mod.rs
src-tauri/src/tauri_state/capture/: mod.rs
src-tauri/src/tauri_state/capture/capture_config/: mod.rs
src-tauri/src/tauri_state/capture/capture_handle/: capture.rs  capture_message.rs  mod.rs
src-tauri/src/tauri_state/capture/capture_handle/layer_2_infos/: mod.rs
src-tauri/src/tauri_state/capture/capture_handle/layer_2_infos/layer_3_infos/: mod.rs
src-tauri/src/tauri_state/capture/capture_handle/layer_2_infos/layer_3_infos/ip_type/: mod.rs
src-tauri/src/tauri_state/capture/capture_handle/messages/: capture.rs  channel.rs  mod.rs  stats.rs
src-tauri/src/tauri_state/capture/capture_handle/threads/: capture.rs  mod.rs  packet_buffer.rs  processing.rs
src-tauri/src/tauri_state/capture/capture_status/: mod.rs
src-tauri/src/tauri_state/flow_matrix/: mod.rs
src-tauri/src/tests_unitaires/: mod.rs
src-tauri/src/utils/: mod.rs
src-tauri/supply-chain/: config.toml
src-tauri/tests/: Cargo.toml
src-tauri/tests/charge_test/: test.rs
src-tauri/tests/intergration_test/: test.rs
src-tauri/tests/src/: main.rs
src-tauri/tests/src/charge_test/: arp_test.sh  icmp_test.sh  mod.rs  test.py  vlan_test.py
src-tauri/tests/src/integration_test/: ethertype.rs  mod.rs
src-tauri/windows/: hooks.nsh
src-tauri/windows/fragments/: npcap.wxs  registry.wxs
(+209 files in other folders)
