[package]
name = "sonar"
version = "2.3.2"
description = "A Tauri network analyzer App"
authors = ["Cyprien Avico <avicocyprien@yahoo.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sonar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }
tauri-plugin-log = "2.6.0"

[dependencies]
tauri = { version = "2.6.1", features = [] }

# === Tauri's plugins ===
tauri-plugin-shell = "2.3.0"
tauri-plugin-dialog = "2.3.0"
tauri-plugin-fs = "2.4.0"
tauri-plugin-log = "2.6.0"
tauri-plugin-os = "2.3.0"
tauri-plugin-process = "2.3.0"

# === Sérialisation / JSON ===
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# === Logging / Erreurs / Utilitaires ===
log = "0.4.26"
thiserror = "2.0.12"
whoami = "1.6.0"
colored = "3.0.0"
rand = "0.9.1"
dirs = "6.0.0"
sysinfo = "0.35.2"
tokio = "1.45.1"

# === Date / Heure ===
time = "0.3.39"
chrono = "0.4.41"

# === Export / Fichiers ===
csv = "1.3.1"
rust_xlsxwriter = "0.88.0"

# === Analyse Réseau ===
pcap = "2.2.0"
pnet = { git = "https://github.com/Akmot9/libpnet", branch = "V1" }
crossbeam = "0.8.4"
parse_layer7 = "0.3.5"
parse_mrp_packet = { git = "https://github.com/Akmot9/parse_mrp_packet" }
profinet_rt = { git = "https://github.com/Akmot9/profinet_prasing_rs" }

# === Images / Graphiques ===
image = "0.25.6"
resvg = "0.45.1"
usvg = "0.45.1"
base64 = "0.22.1"
aquamarine = "0.6.0"



[dependencies.crossbeam-channel]
version = "0.5.15"

