[package]
name = "sonar"
version = "3.8.0"
description = "A Tauri network analyzer App"
authors = ["Cyprien Avico <avicocyprien@yahoo.com>"]
edition = "2024"
repository = "https://github.com/Sonar-team/Sonar_desktop_app"
license = "AGPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sonar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }
tauri-plugin-log = "2.7.1"

[dependencies]
tauri = { version = "2.9.3", features = [] }
tauri-plugin-shell = "2.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-log = "2.7.1"
tauri-plugin-process = "2.3.1"

pcap = "2.3.0"
packet_parser = "0.10.3"

thiserror = "2.0.17"
crossbeam = "0.8.4"
parking_lot = "0.12.5"
log = "0.4.28"
chrono = "0.4.42"
rayon = "1.11.0"
tokio = "1.48.0"

ouroboros = "0.18.5"

libc = "0.2.177"
tauri-plugin-fs = "2"

csv = "1.4.0"
dirs = "6.0.0"

colored = "3.0.0"
tauri-plugin-os = "2"
sysinfo = "0.37.2"
