[package]
name = "sonar"
version = "3.12.0"
description = "A Tauri network analyzer App"
authors = ["Cyprien Avico <akmot9@proton.me>"]
edition = "2024"
repository = "https://github.com/Sonar-team/Sonar_desktop_app"
license = "AGPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sonar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
tauri-plugin-log = "2.8.0"

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-shell = "2.3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-log = "2.8.0"
tauri-plugin-process = "2.3.1"

pcap = "2.4.0"
packet_parser = "1.2.0"
netdev = "0.42.0"

thiserror = "2.0.18"
crossbeam = "0.8.4"
parking_lot = "0.12.5"
log = "0.4.29"
chrono = "0.4.44"
rayon = "1.12.0"
tokio = "1.52.1"

ouroboros = "0.18.5"

libc = "0.2.185"
tauri-plugin-fs = "2.5.0"

csv = "1.4.0"
dirs = "6.0.0"

colored = "3.1.1"
tauri-plugin-os = "2"
sysinfo = "0.38.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
tauri-plugin-global-shortcut = "2"
